implementations/rust/ockam/ockam/tests/node_test/pass_if_unused_context.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/pass_if_unused_context.rs:4:1
  |
4 | / #[ockam::test]
5 | | async fn my_test(_ctx: &mut ockam_node::Context) -> ockam_core::Result<()> {
6 | |     // _ctx.stop().unwrap();
7 | |     let _x = 42 as u8;
8 | |     Ok(())
9 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node_test/pass_if_unused_context.rs`
